--- a/PositionIn/MainMenu/PositionIn.MainMenuUserCell.xib
+++ b/PositionIn/MainMenu/PositionIn.MainMenuUserCell.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -17,8 +17,7 @@
                         <rect key="frame" x="10" y="8" width="48" height="48"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="48" id="MnK-Rx-qDb"/>
-                            <constraint firstAttribute="height" constant="48" id="QSs-WV-8B1"/>
+                            <constraint firstAttribute="width" secondItem="TG7-qT-ogk" secondAttribute="height" multiplier="1:1" id="4J2-6T-AHQ"/>
                             <constraint firstAttribute="height" constant="48" id="ptc-p9-HkT"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
@@ -32,14 +31,9 @@
                                 <real key="value" value="2"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="QSs-WV-8B1"/>
-                            </mask>
-                        </variation>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="400" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IWy-ep-G0u">
-                        <rect key="frame" x="63" y="21" width="252" height="21"/>
+                        <rect key="frame" x="63" y="21.5" width="252" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -47,29 +41,13 @@
                 </subviews>
                 <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
-                    <constraint firstItem="TG7-qT-ogk" firstAttribute="top" secondItem="2Bg-jC-e6c" secondAttribute="topMargin" id="1A2-4p-P0K"/>
-                    <constraint firstItem="TG7-qT-ogk" firstAttribute="top" secondItem="2Bg-jC-e6c" secondAttribute="topMargin" id="1gr-02-5gR"/>
-                    <constraint firstAttribute="bottom" secondItem="TG7-qT-ogk" secondAttribute="bottom" id="3G1-HR-0Tc"/>
+                    <constraint firstItem="TG7-qT-ogk" firstAttribute="top" secondItem="2Bg-jC-e6c" secondAttribute="top" constant="8" id="1A2-4p-P0K"/>
                     <constraint firstItem="IWy-ep-G0u" firstAttribute="leading" secondItem="TG7-qT-ogk" secondAttribute="trailing" constant="5" id="Wkk-ag-vUq"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="TG7-qT-ogk" secondAttribute="bottom" constant="-1" id="iDx-j1-Jhy"/>
-                    <constraint firstItem="TG7-qT-ogk" firstAttribute="top" secondItem="2Bg-jC-e6c" secondAttribute="top" id="iZ5-U8-ff9"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="TG7-qT-ogk" secondAttribute="bottom" constant="-1" id="lVD-j0-eVZ"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="TG7-qT-ogk" secondAttribute="bottom" constant="-1" id="lmR-6M-Dat"/>
+                    <constraint firstAttribute="bottom" secondItem="TG7-qT-ogk" secondAttribute="bottom" constant="8" id="iDx-j1-Jhy"/>
                     <constraint firstItem="TG7-qT-ogk" firstAttribute="leading" secondItem="2Bg-jC-e6c" secondAttribute="leading" constant="10" id="oAY-Ys-UvD"/>
                     <constraint firstAttribute="centerY" secondItem="IWy-ep-G0u" secondAttribute="centerY" id="vT0-vT-Ibz"/>
-                    <constraint firstAttribute="centerY" secondItem="TG7-qT-ogk" secondAttribute="centerY" id="wrR-Ex-VVZ"/>
                     <constraint firstAttribute="trailing" secondItem="IWy-ep-G0u" secondAttribute="trailing" constant="5" id="x5H-mX-F4w"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="constraints">
-                        <exclude reference="1gr-02-5gR"/>
-                        <exclude reference="3G1-HR-0Tc"/>
-                        <exclude reference="iZ5-U8-ff9"/>
-                        <exclude reference="lVD-j0-eVZ"/>
-                        <exclude reference="lmR-6M-Dat"/>
-                        <exclude reference="wrR-Ex-VVZ"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <color key="tintColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
