Added message list cells

--- a/PositionIn/Messaging/PositionIn.MessagesListViewController.xib
+++ b/PositionIn/Messaging/PositionIn.MessagesListViewController.xib
@@ -15,7 +15,7 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MMq-BL-wU8" customClass="TableView" customModule="PosInCore">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MMq-BL-wU8" customClass="TableView" customModule="PosInCore">
                     <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                 </tableView>
             </subviews>
