--- a/PositionIn/Post/PositionIn.PostViewController.xib
+++ b/PositionIn/Post/PositionIn.PostViewController.xib
@@ -6,6 +6,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PostViewController" customModule="PositionIn" customModuleProvider="target">
             <connections>
+                <outlet property="enterCommentField" destination="vtg-OZ-pPC" id="Lud-dt-da1"/>
+                <outlet property="enterCommentFieldBottomSpaceConstraint" destination="FVt-q7-YLY" id="FQK-RF-TbI"/>
                 <outlet property="tableView" destination="hjz-f2-eqH" id="mwG-kC-nkU"/>
                 <outlet property="view" destination="g23-wy-9VV" id="fuD-ie-How"/>
             </connections>
@@ -16,17 +18,28 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hjz-f2-eqH" customClass="TableView" customModule="PosInCore">
-                    <rect key="frame" x="5" y="5" width="590" height="590"/>
+                    <rect key="frame" x="5" y="5" width="590" height="555"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                 </tableView>
+                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vtg-OZ-pPC">
+                    <rect key="frame" x="5" y="565" width="590" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="3UR-v8-ZLb"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" returnKeyType="send"/>
+                </textField>
             </subviews>
             <color key="backgroundColor" red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="hjz-f2-eqH" firstAttribute="leading" secondItem="g23-wy-9VV" secondAttribute="leading" constant="5" id="JCk-ck-0D0"/>
-                <constraint firstAttribute="bottom" secondItem="hjz-f2-eqH" secondAttribute="bottom" constant="5" id="KRT-Z9-4xC"/>
-                <constraint firstAttribute="trailing" secondItem="hjz-f2-eqH" secondAttribute="trailing" constant="5" id="Wd3-sh-b70"/>
-                <constraint firstItem="hjz-f2-eqH" firstAttribute="top" secondItem="g23-wy-9VV" secondAttribute="top" constant="5" id="mDH-jh-16R"/>
+                <constraint firstItem="vtg-OZ-pPC" firstAttribute="top" secondItem="hjz-f2-eqH" secondAttribute="bottom" constant="5" id="2c7-CH-bOM"/>
+                <constraint firstItem="vtg-OZ-pPC" firstAttribute="leading" secondItem="g23-wy-9VV" secondAttribute="leading" constant="5" id="4nP-P8-e5i"/>
+                <constraint firstAttribute="trailing" secondItem="vtg-OZ-pPC" secondAttribute="trailing" constant="5" id="4nq-oq-Qyb"/>
+                <constraint firstAttribute="bottom" secondItem="vtg-OZ-pPC" secondAttribute="bottom" constant="5" id="FVt-q7-YLY"/>
+                <constraint firstItem="hjz-f2-eqH" firstAttribute="leading" secondItem="g23-wy-9VV" secondAttribute="leading" constant="5" id="XMq-yi-9iG"/>
+                <constraint firstItem="hjz-f2-eqH" firstAttribute="top" secondItem="g23-wy-9VV" secondAttribute="top" constant="5" id="iQ6-0G-6iJ"/>
+                <constraint firstAttribute="trailing" secondItem="hjz-f2-eqH" secondAttribute="trailing" constant="5" id="w3J-KY-nmg"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
         </view>
