--- a/PositionIn/Base.lproj/Main.storyboard
+++ b/PositionIn/Base.lproj/Main.storyboard
@@ -121,12 +121,50 @@
             <objects>
                 <viewController id="WCn-eT-80Y" customClass="MessagesListViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="Messages" id="45E-vw-XYB">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="tdQ-rK-BMU"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="tdQ-rK-BMU">
+                            <connections>
+                                <segue destination="wRQ-Sd-Bqd" kind="show" id="BGH-D0-iow"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4CW-wc-yjP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="914" y="564"/>
+        </scene>
+        <!--New chat-->
+        <scene sceneID="db6-mU-8Il">
+            <objects>
+                <viewController storyboardIdentifier="CreateConversationViewController" id="wRQ-Sd-Bqd" customClass="CreateConversationViewController" customModule="PositionIn" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VUq-sd-sz2"/>
+                        <viewControllerLayoutGuide type="bottom" id="kEf-ew-gOJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JYa-e6-fzS">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="bcr-ye-21T" customClass="TableView" customModule="PosInCore">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kEf-ew-gOJ" firstAttribute="top" secondItem="bcr-ye-21T" secondAttribute="bottom" id="0lR-Ur-f47"/>
+                            <constraint firstItem="bcr-ye-21T" firstAttribute="leading" secondItem="JYa-e6-fzS" secondAttribute="leading" id="72o-JK-bMk"/>
+                            <constraint firstAttribute="trailing" secondItem="bcr-ye-21T" secondAttribute="trailing" id="LwC-mo-kau"/>
+                            <constraint firstItem="bcr-ye-21T" firstAttribute="top" secondItem="VUq-sd-sz2" secondAttribute="bottom" id="scb-as-DZd"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="New chat" id="Pkh-Xl-2kV"/>
+                    <connections>
+                        <outlet property="tableView" destination="bcr-ye-21T" id="A93-LY-vKy"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4QH-aU-lrf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1590" y="581"/>
         </scene>
         <!--Filters-->
         <scene sceneID="7z0-MQ-MCn">
@@ -616,7 +654,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ru2-xA-PBE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1764" y="604"/>
+            <point key="canvasLocation" x="2421" y="600"/>
         </scene>
         <!--Promotion Details View Controller-->
         <scene sceneID="ec5-5d-AsZ">
@@ -1038,6 +1076,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="UGm-BP-OPQ"/>
-        <segue reference="gvg-eL-WZN"/>
+        <segue reference="OnQ-Ex-OI6"/>
     </inferredMetricsTieBreakers>
 </document>
