--- a/PositionIn/MainMenu/PositionIn.MainMenuLoginCell.xib
+++ b/PositionIn/MainMenu/PositionIn.MainMenuLoginCell.xib
@@ -12,8 +12,8 @@
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="YvX-wa-ltC" id="2Bg-jC-e6c">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o5z-oX-n5l">
-                        <rect key="frame" x="5" y="5" width="310" height="37.5"/>
+                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o5z-oX-n5l">
+                        <rect key="frame" x="5" y="5" width="310" height="38"/>
                         <color key="backgroundColor" red="1" green="0.73725490199999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
                         <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                         <state key="normal" title="Sign up">
