--- a/PositionIn/MainMenu/PositionIn.MainMenuViewController.xib
+++ b/PositionIn/MainMenu/PositionIn.MainMenuViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -26,7 +26,8 @@
                             </constraints>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" red="0.13725490200000001" green="0.4431372549" blue="0.83529411760000005" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.88235294119999996" green="0.0" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="tintColor" red="0.88235294119999996" green="0.0" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="H3n-OD-Lqk" secondAttribute="trailing" id="7RD-XZ-Dsl"/>
                         <constraint firstAttribute="bottom" secondItem="H3n-OD-Lqk" secondAttribute="bottom" id="LOR-C7-BDl"/>
