--- a/PositionIn/Settings/PositionIn.SettingsHeaderCell.xib
+++ b/PositionIn/Settings/PositionIn.SettingsHeaderCell.xib
@@ -16,7 +16,7 @@
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mPD-yo-wxO">
                         <rect key="frame" x="28" y="91" width="264" height="30"/>
-                        <color key="backgroundColor" red="0.10980392160000001" green="0.34901960780000002" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.88235294119999996" green="0.0" blue="0.14901960780000001" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" title="Spread The Word">
                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
